Revision history for Perl module WebService::Linode

{{$NEXT}}

0.14  2013-10-23 11:04:39 EDT
    - Add Mozilla::CA to dependencies.

0.13  2013-09-28 20:05:23 EDT
    - No functional changes in this release.
    - Update link to Linode API docs
    - Clean up POD a bit, remove required/optional parameter headings when list
      is empty
    - https://github.com/mikegrb/WebService-Linode/pull/2 to update older
      change log entries to CPAN::Changes::Spec, thanks @neilbowers

0.12  2013-09-25 14:58:18 EDT
    - Upstream API Changes
        - New methods:
            - Prefixed by account_: estimateinvoice, paybalance, updatecard
            - Prefixed by linode_:  mutate, webconsoletoken
        - New optional args for linode_update:
            - ms_ssh_disabled, ms_ssh_ip, ms_ssh_port, ms_ssh_user
    - Bugfix
        - fix avail_plans requiring optional planid argument
        - verify domain_resource_create and linode_config_create still require
          primary key as avail_plans does in api.spec
    - Dist Creation Changes
        - converted dist creation to milla
        - moved helper scripts to
          https://github.com/mikegrb/WebService-Linode-AuthorUtils

0.11 2012-02-11
    - fix primary keys marked as required param for domain_resource_create and
      linode_config_create (thanks Peter Stephan)
      - note: not fixed upstream yet gen-validation.pl output can not be used
        directly currently

0.10 2012-20-08
    - updated API definition from api.spec after Linode fix, closes #79093

0.09 2012-29-07
    - Forgot to bump version number in DNS.pm and Base.pm
        this is why all my other modules use Dist::Zilla

0.08 2012-29-07
    - new upstream API calls added
        many additions including nodebalancer support
        see for full changes http://j.mp/MNKKTf
    - patch from stephon for deprecated DNS.pm (closes rt #71833)

0.07 2012-10-02
    - Correct typo in resourceid argument to domain_resource->list

0.06 1012-12-01